Add initial repository/service classes/interfaces and views for adding contact and confirmation page. Add controller actions for respective views and call to get all contacts.

--- a/ClarkCodingChallenge/ClarkCodingChallenge.csproj
+++ b/ClarkCodingChallenge/ClarkCodingChallenge.csproj
@@ -5,4 +5,8 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
